<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cartoon4"




    tools:context=".activities.LoginActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/guest_button"
        android:layout_width="85dp"
        android:layout_height="46dp"
        android:layout_marginEnd="272dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:text="@string/guest"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        android:layout_width="99dp"
        android:layout_height="28dp"
        android:layout_marginEnd="120dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.825" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="272dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="242dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/grey_white_background"
        android:backgroundTint="@color/white"
        android:gravity="start|center_vertical"
        android:hint="@string/enter_username"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="240dp"
        android:layout_height="43dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/grey_white_background"
        android:backgroundTint="@color/white"
        android:gravity="start|center_vertical"
        android:hint="@string/enter_password"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <ImageView
        android:id="@+id/splash_imageView"
        android:layout_width="41.6dp"
        android:layout_height="24.7dp"
        android:src="@drawable/no_background_trivia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283"
        tools:ignore="ContentDescription" />

    <!-- android:src="@drawable/daily_trivia_cream" -->




</androidx.constraintlayout.widget.ConstraintLayout>