<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cartoon4"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.MainActivity"
    >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_profile_button"
        android:layout_width="88dp"
        android:layout_height="17dp"
        android:layout_weight="1"
        android:background="@drawable/dark_purple_button_background"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_out_button"
        android:layout_width="113dp"
        android:layout_height="34dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/splash_imageView2"
        android:layout_width="236dp"
        android:layout_height="293dp"
        android:src="@drawable/no_background_trivia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="206dp"
        android:layout_height="42dp"
        android:fontFamily="@font/chela_one"
        android:gravity="center"
        android:text="Welcome User"
        android:textColor="@color/cloud_white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="NotSibling" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/quick_play_button"
        android:layout_width="108dp"
        android:layout_height="47dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="104dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:text="@string/random_quiz"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/settingButton5"
        android:layout_width="73dp"
        android:layout_height="65dp"
        android:background="@null"
        android:foreground="@null"
        android:importantForAccessibility="no"
        android:src="@drawable/android_studio_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <ImageButton
        android:id="@+id/achievement_button"
        android:layout_width="56dp"
        android:layout_height="51dp"
        android:background="@null"
        android:foreground="@null"
        android:importantForAccessibility="no"
        android:src="@drawable/android_studio_medal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337" />

    <ImageButton
        android:id="@+id/hint_question_mark"
        android:layout_width="70dp"
        android:layout_height="63dp"
        android:background="@null"
        android:foreground="@null"
        android:importantForAccessibility="no"
        android:src="@drawable/hint_question_mark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <ImageButton
        android:id="@+id/volume_button"
        android:layout_width="72dp"
        android:layout_height="61dp"
        android:background="@null"
        android:foreground="@null"
        android:importantForAccessibility="no"
        android:src="@drawable/android_studio_volume_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />


    <ImageButton
        android:id="@+id/notification_button"
        android:layout_width="66dp"
        android:layout_height="68dp"
        android:background="@null"
        android:foreground="@null"
        android:importantForAccessibility="no"
        android:src="@drawable/cartoon_notifx78"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/play_button"
        android:layout_width="131dp"
        android:layout_height="63dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="156dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:text="@string/play"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/mainProfileImage"
        android:layout_width="85dp"
        android:layout_height="89dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_picx100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

</androidx.constraintlayout.widget.ConstraintLayout>